// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`PhoneNumberFieldList snapshots matches snapshot with no phones 1`] = `
<body>
  <div>
    <fieldset
      class="rcx-box rcx-box--full rcx-css-1g16yxh"
    >
      <legend
        style="border: 0px; clip-path: inset(50%); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
      >
        Phone Numbers
      </legend>
      <ul
        class="rcx-box rcx-box--full rcx-css-bgtdl9"
        id="phones-phones-list"
      />
      <div
        class="rcx-box rcx-box--full"
      >
        <button
          aria-controls="phones-phones-list"
          class="rcx-box rcx-box--full rcx-button--small rcx-button rcx-css-1fczwx8"
          type="button"
        >
          <span
            class="rcx-button--content"
          >
            <i
              aria-hidden="true"
              class="rcx-box rcx-box--full rcx-icon--name-plus rcx-icon rcx-css-1hdf9ok"
            >
              
            </i>
            Add number
          </span>
        </button>
      </div>
    </fieldset>
  </div>
</body>
`;

exports[`PhoneNumberFieldList snapshots matches snapshot with phones 1`] = `
<body>
  <div>
    <fieldset
      class="rcx-box rcx-box--full rcx-css-1g16yxh"
    >
      <legend
        style="border: 0px; clip-path: inset(50%); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
      >
        Phone Numbers
      </legend>
      <ul
        class="rcx-box rcx-box--full rcx-css-bgtdl9"
        id="phones-phones-list"
      >
        <li
          class="rcx-box rcx-box--full rcx-css-vhjf5t"
          id="mock-phone-0"
        >
          <div
            class="rcx-box rcx-box--full rcx-field"
          >
            <label
              class="rcx-box rcx-box--full rcx-field__label rcx-label"
              for="react-aria-_r_0_-label"
            >
              Phone number
            </label>
            <span
              class="rcx-box rcx-box--full rcx-field__row"
            >
              <input
                aria-describedby=""
                aria-invalid="false"
                aria-label="Phone number 1"
                class="rcx-box rcx-box--full rcx-box--animated rcx-input-box--type-text rcx-input-box rcx-css-t3n91h"
                id="react-aria-_r_0_-label"
                name="phones.0.number"
                size="1"
                type="text"
                value="+15551234567"
              />
              <button
                aria-controls="mock-phone-0"
                aria-label="Remove number Home"
                class="rcx-box rcx-box--full rcx-button--small-square rcx-button--square rcx-button--icon rcx-button"
                title="Remove"
                type="button"
              >
                <i
                  aria-hidden="true"
                  class="rcx-box rcx-box--full rcx-icon--name-trash rcx-icon rcx-css-4pvxx3"
                >
                  
                </i>
              </button>
            </span>
          </div>
          <div
            class="rcx-box rcx-box--full rcx-field"
          >
            <label
              class="rcx-box rcx-box--full rcx-field__label rcx-label"
              for="react-aria-_r_1_-label"
            >
              Label
            </label>
            <span
              class="rcx-box rcx-box--full rcx-field__row"
            >
              <input
                aria-describedby="react-aria-_r_1_-hint"
                aria-invalid="false"
                aria-label="Label for phone number 1"
                class="rcx-box rcx-box--full rcx-box--animated rcx-input-box--type-text rcx-input-box rcx-css-t3n91h"
                id="react-aria-_r_1_-label"
                name="phones.0.label"
                placeholder="Label"
                size="1"
                type="text"
                value="Home"
              />
            </span>
            <span
              class="rcx-box rcx-box--full rcx-field__hint"
              id="react-aria-_r_1_-hint"
            >
              Others can see name alongside number
            </span>
          </div>
        </li>
        <li
          class="rcx-box rcx-box--full rcx-css-vhjf5t"
          id="mock-phone-1"
        >
          <div
            class="rcx-box rcx-box--full rcx-field"
          >
            <label
              class="rcx-box rcx-box--full rcx-field__label rcx-label"
              for="react-aria-_r_2_-label"
            >
              Phone number
            </label>
            <span
              class="rcx-box rcx-box--full rcx-field__row"
            >
              <input
                aria-describedby=""
                aria-invalid="false"
                aria-label="Phone number 2"
                class="rcx-box rcx-box--full rcx-box--animated rcx-input-box--type-text rcx-input-box rcx-css-t3n91h"
                id="react-aria-_r_2_-label"
                name="phones.1.number"
                size="1"
                type="text"
                value="+15559876543"
              />
              <button
                aria-controls="mock-phone-1"
                aria-label="Remove number 2"
                class="rcx-box rcx-box--full rcx-button--small-square rcx-button--square rcx-button--icon rcx-button"
                title="Remove"
                type="button"
              >
                <i
                  aria-hidden="true"
                  class="rcx-box rcx-box--full rcx-icon--name-trash rcx-icon rcx-css-4pvxx3"
                >
                  
                </i>
              </button>
            </span>
          </div>
          <div
            class="rcx-box rcx-box--full rcx-field"
          >
            <label
              class="rcx-box rcx-box--full rcx-field__label rcx-label"
              for="react-aria-_r_3_-label"
            >
              Label
            </label>
            <span
              class="rcx-box rcx-box--full rcx-field__row"
            >
              <input
                aria-describedby="react-aria-_r_3_-hint"
                aria-invalid="false"
                aria-label="Label for phone number 2"
                class="rcx-box rcx-box--full rcx-box--animated rcx-input-box--type-text rcx-input-box rcx-css-t3n91h"
                id="react-aria-_r_3_-label"
                name="phones.1.label"
                placeholder="Label"
                size="1"
                type="text"
                value=""
              />
            </span>
            <span
              class="rcx-box rcx-box--full rcx-field__hint"
              id="react-aria-_r_3_-hint"
            >
              Others can see name alongside number
            </span>
          </div>
        </li>
      </ul>
      <div
        class="rcx-box rcx-box--full"
      >
        <button
          aria-controls="phones-phones-list"
          class="rcx-box rcx-box--full rcx-button--small rcx-button rcx-css-p7cq8l"
          type="button"
        >
          <span
            class="rcx-button--content"
          >
            <i
              aria-hidden="true"
              class="rcx-box rcx-box--full rcx-icon--name-plus rcx-icon rcx-css-1hdf9ok"
            >
              
            </i>
            Add number
          </span>
        </button>
      </div>
    </fieldset>
  </div>
</body>
`;
